--- a/src/main/webapp/giris.xhtml
+++ b/src/main/webapp/giris.xhtml
@@ -9,8 +9,8 @@
     <h:body>
         <h:form><center><br/><br/><br/><br/><br/><br/><br/>
             <h:panelGrid columns="2" border="1">
-                <f:facet name="header">
-                    <h:outputText value="Giriş">
+                <f:facet name="header" >
+                <h:outputText value="GİRİŞ">
                   </h:outputText>
               </f:facet>
                 
